@@ -111,10 +111,10 @@ public:
 	/* Proxies for some Playlist methods */
 
 	ContentList content () const;
-
 	Time length () const;
 	bool has_subtitles () const;
 	OutputVideoFrame best_video_frame_rate () const;
+	bool content_paths_valid () const;
 
 	libdcp::KDM
 	make_kdm (
