@@ -480,6 +480,10 @@ Player::content_changed (weak_ptr<Content> w, int property, bool frequent)
 		) {
 		
 		Changed (frequent);
+
+	} else if (property == ContentProperty::PATH) {
+
+		Changed (frequent);
 	}
 }
 
