@@ -1,3 +1,8 @@
+2013-10-22  Carl Hetherington  <cth@carlh.net>
+
+	* Allow films to be loaded when content is missing,
+	and then that content can be re-found.
+
 2013-10-21  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.19 released.
